--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.3.0
   google_sign_in: ^6.2.1
   firebase_app_check: ^0.3.1
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +89,14 @@ flutter:
     - images/profilecrop.jpg
     - images/google_13170545.png
     - images/IsleHevan text.png
+    - images/KAN.png
+    - images/pexels-javid-huseynli-1054685514-20648407.jpg
+    - images/no-image.png
+    - images/KANDY.png
+    - images/KANDY1.png
+    - images/COLOMBO.png
+    - images/JAFFNA.png
+    - images/GALLE.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
