--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,11 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_app_check: ^0.3.1
   razorpay_flutter: ^1.3.7
+  intl: ^0.18.1
+  flutter_launcher_icons: ^0.14.1
+  pdf: ^3.6.0
+  printing: ^5.6.0
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +105,8 @@ flutter:
     - images/user.png
     - images/istockphoto-1135563582-612x612.jpg
     - images/IsleHevan text.balck.png
+    - images/no-image.png
+    - images/user-profile_12589073.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
